--- a/.gitmodules
+++ b/.gitmodules
@@ -40,6 +40,7 @@
 [submodule "extensions/python-language-server"]
 	path = extensions/python-language-server
 	url = https://github.com/microsoft/python-language-server
+	ignore = dirty
 [submodule "extensions/lsp-python-ms"]
 	path = extensions/lsp-python-ms
 	url = https://github.com/andrew-christianson/lsp-python-ms
@@ -58,3 +59,6 @@
 [submodule "extensions/multiple-cursor"]
 	path = extensions/multiple-cursor
 	url = https://github.com/magnars/multiple-cursors.el
+[submodule "extensions/magit"]
+	path = extensions/magit
+	url = https://github.com/magit/magit
