--- a/.gitmodules
+++ b/.gitmodules
@@ -63,7 +63,7 @@
 	path = extensions/use-package
 	url = https://github.com/jwiegley/use-package
 [submodule "extensions/general.el"]
-	path = extensions/general.el
+	path = extensions/general
 	url = https://github.com/noctuid/general.el
 [submodule "extensions/hydra"]
 	path = extensions/hydra
@@ -72,10 +72,10 @@
 	path = extensions/pyvenv
 	url = https://github.com/jorgenschaefer/pyvenv
 [submodule "extensions/pipenv.el"]
-	path = extensions/pipenv.el
+	path = extensions/pipenv
 	url = https://github.com/pwalsh/pipenv.el
 [submodule "extensions/pip-requirements.el"]
-	path = extensions/pip-requirements.el
+	path = extensions/pip-requirements
 	url = https://github.com/Wilfred/pip-requirements.el
 [submodule "extensions/auto-save"]
 	path = extensions/auto-save
