--- a/.gitmodules
+++ b/.gitmodules
@@ -129,3 +129,27 @@
 [submodule "extensions/cdlatex"]
 	path = extensions/cdlatex
 	url = https://github.com/cdominik/cdlatex
+[submodule "extensions/all-the-icons.el"]
+	path = extensions/all-the-icons
+	url = https://github.com/domtronn/all-the-icons
+[submodule "extensions/prescient.el"]
+	path = extensions/prescient
+	url = https://github.com/raxod502/prescient
+[submodule "extensions/company-box"]
+	path = extensions/company-box
+	url = https://github.com/sebastiencs/company-box
+[submodule "extensions/company-reftex"]
+	path = extensions/company-reftex
+	url = https://github.com/TheBB/company-reftex
+[submodule "extensions/company-math"]
+	path = extensions/company-math
+	url = https://github.com/vspinu/company-math
+[submodule "extensions/math-symbol-lists"]
+	path = extensions/math-symbol-lists
+	url = https://github.com/vspinu/math-symbol-lists
+[submodule "extensions/org-mode"]
+	path = extensions/org-mode
+	url = https://code.orgmode.org/bzg/org-mode
+[submodule "extensions/evil"]
+	path = extensions/evil
+	url = https://github.com/emacs-evil/evil
