--- a/.gitmodules
+++ b/.gitmodules
@@ -315,3 +315,6 @@
 [submodule "extensions/emacs-application-framework"]
 	path = extensions/emacs-application-framework
 	url = https://github.com/manateelazycat/emacs-application-framework
+[submodule "extensions/evil-matchit"]
+	path = extensions/evil-matchit
+	url = https://github.com/redguardtoo/evil-matchit
