--- a/.gitmodules
+++ b/.gitmodules
@@ -291,3 +291,9 @@
 [submodule "extensions/evil-matchit"]
 	path = extensions/evil-matchit
 	url = https://github.com/redguardtoo/evil-matchit
+[submodule "extensions/evil-org-mode"]
+	path = extensions/evil-org-mode
+	url = https://github.com/Somelauw/evil-org-mode
+[submodule "extensions/snails"]
+	path = extensions/snails
+	url = https://github.com/zenith-john/snails
