Use awesome-tray to replace doom-mode-line.

--- a/.gitmodules
+++ b/.gitmodules
@@ -156,12 +156,6 @@
 [submodule "extensions/emacs-doom-themes"]
 	path = extensions/emacs-doom-themes
 	url = https://github.com/hlissner/emacs-doom-themes
-[submodule "extensions/doom-modeline"]
-	path = extensions/doom-modeline
-	url = https://github.com/seagle0128/doom-modeline
-[submodule "extensions/shrink-path"]
-	path = extensions/shrink-path
-	url = https://gitlab.com/bennya/shrink-path.el
 [submodule "extensions/auctex"]
 	path = extensions/auctex
 	url = https://git.savannah.gnu.org/git/auctex.git
@@ -291,3 +285,6 @@
 [submodule "extensions/snails"]
 	path = extensions/snails
 	url = https://github.com/manateelazycat/snails
+[submodule "extensions/awesome-tray"]
+	path = extensions/awesome-tray
+	url = https://github.com/manateelazycat/awesome-tray
