--- a/.gitmodules
+++ b/.gitmodules
@@ -77,9 +77,6 @@
 [submodule "extensions/all-the-icons"]
 	path = extensions/all-the-icons
 	url = https://github.com/domtronn/all-the-icons.el
-[submodule "extensions/prescient"]
-	path = extensions/prescient
-	url = https://github.com/raxod502/prescient.el
 [submodule "extensions/company-box"]
 	path = extensions/company-box
 	url = https://github.com/sebastiencs/company-box
@@ -287,3 +284,6 @@
 [submodule "extensions/libegit2"]
 	path = extensions/libgit
 	url = https://github.com/magit/libegit2
+[submodule "extensions/amx"]
+	path = extensions/amx
+	url = https://github.com/DarwinAwardWinner/amx
