--- a/.gitmodules
+++ b/.gitmodules
@@ -287,3 +287,6 @@
 [submodule "extensions/amx"]
 	path = extensions/amx
 	url = https://github.com/DarwinAwardWinner/amx
+[submodule "extensions/ebib"]
+	path = extensions/ebib
+	url = https://github.com/joostkremers/ebib
