Move code around, and add rg.el.

--- a/.gitmodules
+++ b/.gitmodules
@@ -308,3 +308,6 @@
 [submodule "extensions/evil-nerd-commenter"]
 	path = extensions/evil-nerd-commenter
 	url = https://github.com/redguardtoo/evil-nerd-commenter
+[submodule "extensions/rg"]
+	path = extensions/rg
+	url = https://github.com/dajva/rg.el
