--- a/.gitmodules
+++ b/.gitmodules
@@ -374,3 +374,6 @@
 [submodule "extensions/multi-vterm"]
 	path = extensions/multi-vterm
 	url = https://github.com/suonlight/multi-vterm
+[submodule "extensions/emacs-winum"]
+	path = extensions/emacs-winum
+	url = https://github.com/deb0ch/emacs-winum
